tests/sksl/errors/RedeclareVariable.glsl
### Compilation failed:

error: 4: symbol 'x' was already defined
error: 5: symbol 'x' was already defined
error: 6: symbol 'x' was already defined
error: 7: symbol 'x' was already defined
error: 11: symbol 'y' was already defined
error: 12: symbol 'y' was already defined
error: 13: symbol 'y' was already defined
error: 14: symbol 'y' was already defined
8 errors
